--- a/app/[lng]/globals.css
+++ b/app/[lng]/globals.css
@@ -8,6 +8,10 @@
     --btn-background: 200 10% 91%;
     --btn-background-hover: 200 10% 89%;
     --foreground: 200 50% 3%;
+    --background-beige: #C8C5BD;
+    --background-white: #F4F4F4;
+    --foreground-dark-gray: #333333;
+    --svg-stroke-color: #000000;
   }
 
   @media (prefers-color-scheme: dark) {
@@ -16,6 +20,15 @@
       --btn-background: 200 10% 9%;
       --btn-background-hover: 200 10% 12%;
       --foreground: 200 20% 96%;
+      --background-beige: #C8C5BD;
+      --background-white: #F4F4F4;
+      --foreground-dark-gray: #333333;
+      --svg-stroke-color: #000000;
+    }
+
+    .dark {
+      --svg-stroke-color: #ffffff;
+      /* Stroke color for dark mode */
     }
   }
 }
@@ -35,6 +48,7 @@
     opacity: 0;
     transform: translateY(10px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
