--- a/app/[lng]/customCss/embla.css
+++ b/app/[lng]/customCss/embla.css
@@ -2,7 +2,6 @@
   transform: scale(0.8, 0.8);
 
   &:hover {
-    box-shadow: 0 70px 40px -20px rgba(0, 0, 0, 0.2);
     transition: 0.4s ease-in-out transform;
     transform: translate3d(0px, 0px, -250px) scale(1, 1);
     position: relative;
@@ -12,14 +11,22 @@
 
 .embla {
   --slide-spacing: 1rem;
-  --slide-size: 30%;
-  --slide-height: 29rem;
+  --slide-size: 33%;
+  --slide-height: 40vh;
   padding: 1.6rem;
   width: 100%;
 }
 
+/* Mobile styles */
+@media (max-width: 767px) {
+  .embla {
+    --slide-spacing: -1rem;
+    --slide-size: 100%;
+  }
+}
+
 .embla__viewport {
-  height: 80vh;
+  height: 70vh;
   overflow: hidden;
 }
 
@@ -80,6 +87,8 @@
   top: 50%;
   transform: translateY(-50%);
   left: 1.6rem;
+  width: 1px;
+  height: 1px;
 }
 
 .embla__button {
