--- a/app/[lng]/globals.css
+++ b/app/[lng]/globals.css
@@ -10,6 +10,7 @@
     --btn-background: 200 10% 91%;
     --btn-background-hover: 200 10% 89%;
     --foreground: 200 50% 3%;
+    --foreground-white: #F4F4F4;
     --background-beige: #C8C5BD;
     --background-white: #F4F4F4;
     --background-black: #0A0A0A;
@@ -23,6 +24,7 @@
       --btn-background: 200 10% 9%;
       --btn-background-hover: 200 10% 12%;
       --foreground: 200 20% 96%;
+      --foreground-white: #F4F4F4;
       --background-beige: #C8C5BD;
       --background-white: #F4F4F4;
       --background-black: #0A0A0A;
